--- a/projects.css
+++ b/projects.css
@@ -28,7 +28,7 @@ body {
     }
 }
 body::-webkit-scrollbar{
-    width: 0.25rem;
+    width: 0.45rem;
 }
 
 body::-webkit-scrollbar-track {
@@ -169,18 +169,52 @@ hr.rounded{
 
 .project-figure
 {
-    width: 550px;
-    height: 350px;
+    width: 640px;
+    height: 460px;
 }
 
 .project-figure-container
 {
-    align-items: center;
+    display: flex;
+    width: auto;
+    height: auto;
+    justify-content: center;
+}
 
+/*width: 45vw means the image is 45% of the
+viewpoert width this unit is responsive*/
+.body-images
+{
+    object-fit: contain;
+    width: 45vw;
+    animation: fade-in-image linear forwards;
+    animation-timeline: view();
+    animation-range: normal entry;
+}
+
+.code-container
+{
+    object-fit: contain;
+    width: fit-content;
+
+    animation: fade-in-image linear forwards;
+    animation-timeline: view();
+    animation-range: normal entry 60%;
+}
+
+.flexContainer {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-}
+    flex-flow: wrap;
+    justify-content: space-between;
+    max-width: 60%;
+  }
+  
+
+  .flexContainer::before,
+  .flexContainer::after {
+     content: "";
+  }
 
 .project__divider{
     height: 1px;
@@ -211,7 +245,7 @@ section:nth-child(even) {
    }
 
 .project-figure {
-    border: 5px solid ;
+    border: 5px solid;
 
     box-shadow: -2px 5px 33px 6px rgba(38, 19, 69, 0.65);
   }
@@ -225,7 +259,7 @@ section:nth-child(even) {
     line-height: 2rem;
   }
 
-  footer {
+footer {
     background-color: #2e2d2d;
 }
 
@@ -303,7 +337,8 @@ a
     position: relative;
 }
 
-.carousel{
+.carousel
+{
     width: 100%;
 }
 
@@ -318,11 +353,11 @@ a
 }
 
 .carousel-item{
-    height: 200px;
-    opacity:0;
+    height: 240px;
+    opacity: 0;
     position: absolute;
     transition: all 0.3s ease-in-out;
-    width: 380px;
+    width: 420px;
     z-index: 0;
     border-radius: 15px;
     background-size: contain;
@@ -341,6 +376,11 @@ a
     z-index: 1;
 }
 
+.carousel-item-2::before
+{
+    content:"";
+}
+
 .carousel-item-2
 {
     left: 30%;
@@ -350,11 +390,11 @@ a
 .carousel-item-3
 {
     box-shadow: -2px 5px 33px 6px rgba(38, 19, 69, 0.65);
-    height: 300px;
+    height: 340px;
     opacity: 1;
     left: 50%;
     transform: translateX(-50%);
-    width: 480px;
+    width: 580px;
     z-index: 2;
 }
 
@@ -492,21 +532,101 @@ a
 }
 
 .project-video{
-    position: absolute;
-    height: 484px;
-    width: 854px;
+    object-fit: contain;
+    width: 52vw;
+    height: 56vh;
+    animation: fade-in-image linear forwards;
+    animation-timeline: view();
+    animation-range: normal entry;
 }
 
 .video-container{
-    position: relative;
-    overflow: hidden;
-    height: 480px;
-    width: 854px;
-    box-shadow: -2px 5px 33px 6px rgba(38, 19, 69, 0.85);
-    margin-top: 2%;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    margin: 2rem auto;
 }
 
 .highlight-title
 {
-    padding: 2rem 0;
+    font-size: large;
+    font-style: oblique;
+}
+
+.scroll-watcher
+{
+    height: 5px;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    background-color: #6030b1;
+    width: 100%;
+    scale: 0 1;
+    animation: scroll-watcher linear;
+    animation-timeline: scroll();
+}
+
+@keyframes scroll-watcher
+{
+    to{scale: 1 1;}
+}
+
+@keyframes fade-in-image
+{
+    from{scale:.8; opacity: 0;}    
+    to{scale:1; opacity: 1;}
+}
+
+@media (max-width: 768px)
+{
+    .project-video{
+        min-width: 100%;
+        min-height: 50%;
+    }
+
+    .carousel
+    {
+        max-width: 65%;
+        margin: auto;
+    }
+
+.project-figure-container
+{
+    flex-wrap: wrap;
+    height: 650px;
+}
+
+.body-images
+{
+    width: 100%;
+}
+}
+
+@media (max-width: 480px)
+{
+    .project-video{
+        height: 40vh;
+    }
+
+    .carousel
+    {
+        max-width: 18%;
+    }
+
+    .carousel-item-3
+    {
+       width: 420px;
+       height: 240px;
+    }
+
+    .body-images{
+        width: 100%;
+        }
+
+.project-figure-container
+{
+    flex-wrap: wrap;
+    height: 450px;
+}
 }
