--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 }
 
 body::-webkit-scrollbar{
-    width: 0.25rem;
+    width: 0.45rem;
 }
 
 body::-webkit-scrollbar-thumb{
@@ -217,7 +217,9 @@ nav {
 width:100%;
 transform: scale(1.75);
 padding-bottom: 35px;
-padding-left: 8px;
+padding-left: 0px;
+padding-right: 8px;
+padding-top: 4px;
 }
 
 .about-me__info--title {
